update auth