@@ -1,13 +1,15 @@
 package com.github.barbershop.account.security;
 
+import com.github.barbershop.account.entity.Account;
 import com.github.barbershop.account.repository.AccountRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -24,14 +26,14 @@ public class CustomUserDetailsService implements UserDetailsService {
             throw new UsernameNotFoundException("Invalid Telegram user id", exception);
         }
 
-        com.github.barbershop.account.entity.Account user = userRepository.findByTelegramId(parsedTelegramId)
+        Account user = userRepository.findByTelegramId(parsedTelegramId)
                 .orElseThrow(() -> new UsernameNotFoundException(
                         "User not found with Telegram id: " + telegramId));
 
         return new org.springframework.security.core.userdetails.User(
                 user.getTelegramId().toString(),
                 "",
-                Collections.emptyList()
+                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
         );
     }
 }
